# datacademy-v2

./: .gitignore  README.md  pyproject.toml
M02_PCC/: main.ipynb
M03_SQL/: database.db  main.ipynb
M03_SQL/resources/: customers.csv  orders.csv  products.csv
M04_ML/: main.ipynb
M04_SQL/: main.ipynb
M05_API/: api.py  main.ipynb  test.ipynb
M05_API/resources/: customers.json
M06_APIA/: database.py  main.py  models.py  schemas.py  services.py
M07_MLA/: 1. Unsupervised - Clustering.ipynb  2. Supervised - Regression.ipynb  3. Supervised - Classification.ipynb
M07_MLA/data/: Metro_Interstate_Traffic_Volume.parquet  Wholesale_customers_data.parquet  adult.parquet
M09_FINAL/: Main.ipynb
M09_FINAL/app/: main.py  models.py  schemas.py  services.py
M09_FINAL/data/: auctions.parquet
M10_FINAL/: Main.ipynb
M10_FINAL/src/: Main.ipynb
M10_FINAL/src/app/: database.py  services.py  uploadData.py
M10_FINAL/src/data/: lots.parquet
