[tool.poetry]
name = "datacademy"
version = "0.1.0"
description = ""
authors = ["Dirk Koelewijn <d.koelewijn@datacation.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
datacademy-package = {path = "../datacademy-package", develop = true}
ipykernel = "^6.25.2"
numpy = "^1.26.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
